<package format="2">
  <name>arm_gravity_compensation_controller</name>
  <version>0.1.0</version>
  <description>arm_gravity_compensation_controller</description>
  <maintainer email="wobudajianpan@gmail.com">Jianming Yao</maintainer>

  <license>BSD</license>


  <author>Jianming Yao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>

  <test_depend>rostest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/arm_gravity_compensation_controller_plugins.xml"/>
  </export>
</package>
